ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: test
spec:
  ingressClassName: nginx
  rules:
  - host: test.workshop03.noop.zone
    http:
      paths:
      - backend:
          service:
            name: test
            port:
              number: 80
        path: /
        pathType: Exact
  tls:
  - hosts:
    - test.workshop03.noop.zone
status:
  loadBalancer: {}
